--- a/frontend/src/records/css/Service.module.css
+++ b/frontend/src/records/css/Service.module.css
@@ -21,3 +21,7 @@
     background-color:#FEF9C3;
     border-radius: 50px;
 }
+.file{
+    background-color: rgb(249, 245, 238);
+    padding: 1rem;
+}
