--- a/frontend/src/patients/css/InPatient.css
+++ b/frontend/src/patients/css/InPatient.css
@@ -73,11 +73,14 @@
     padding-left: 20px;
   }
   
-  .info-content {
+ .info-content {
     font-size: 16px;
     font-weight: 500;
     margin-top: 5px;
     padding-left: 26px;
+      word-wrap: break-word;
+  white-space: normal;
+  overflow-wrap: break-word;
   }
   
   /* Tabs */
