updated recentinvoice in invoice

--- a/frontend/src/Invoice/css/Recentinvoice.module.css
+++ b/frontend/src/Invoice/css/Recentinvoice.module.css
@@ -16,3 +16,7 @@
   /* Optional: to keep table headers fixed */
   display: block;
 }
+.theader{
+  background-color:#002072 !important ;
+  color: #ffffff !important ;
+}
